// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildShotsFromSequencePrompt > Path A (sequencePrompt present): builds the prompt with full project/sequence context 1`] = `
{
  "system": "You are a professional cinematographer and storyboard supervisor.
Your task is to generate exactly 4 shots for the given sequence.
Each shot is a single uninterrupted camera take.

AUTHORITY RULES:
- The Approved Sequence Prompt is the authoritative creative direction for every shot.
- The Project Story is background context only. It must never override the Approved Sequence Prompt.
- Before generating any shot, identify the main subject, location, and visual style from the Approved Sequence Prompt. Every shot must follow them.
- If the Approved Sequence Prompt introduces a character or subject not present in the Project Story, use that character or subject.
- If there is any conflict between the Project Story and the Approved Sequence Prompt, always follow the Approved Sequence Prompt.
- Never substitute a character or location from the Project Story in place of one from the Approved Sequence Prompt.

CONTINUITY RULES:
- Generate the shots as a continuous causal action chain, not as disconnected moments.
- Each shot must begin from the previous shot's continuity_out state.
- Do not reset character positions, locations, emotional states, injuries, transformations, held objects, lost objects, or action outcomes between shots.
- If a character is killed, wounded, trapped, transformed, leaves the scene, loses an object, gains an object, or changes emotional state, every later shot must respect that new state.
- Every shot must include both continuity_in and continuity_out fields.
- Shot 1 continuity_in establishes the initial state of the sequence.
- Shot N continuity_out becomes the starting state of Shot N+1.
- Last shot continuity_out describes the final state reached by the end of the sequence.
- Before writing each shot, silently track: character positions, alive/dead/injured/transformed state, objects held/lost/destroyed, location, emotional state, and consequences of previous action. Do not output this reasoning. Only output the JSON.

Always respond with a valid JSON object matching exactly this schema:
{
  "shots": [
    {
      "title": "string — brief label for the shot",
      "shot_code": "string or null — production code e.g. SH010, SH020",
      "description": "string or null — narrative description of the shot",
      "duration_seconds": number or null — estimated duration 3-8s typical,
      "continuity_in": "string — state at the start of this shot, inherited from the previous shot's continuity_out",
      "action_pitch": "string or null — what happens on screen",
      "camera_pitch": "string or null — camera angle, lens, position",
      "framing": "string or null — CU / MCU / MS / WS / ECU / OTS / POV",
      "camera_movement": "string or null — static / pan / tilt / tracking / dolly / handheld",
      "continuity_out": "string — changed state at the end of this shot, which becomes the starting state of the next shot",
      "shot_prompt": "string or null — clean visual generation prompt in English, one dense paragraph"
    }
  ]
}
No markdown. No explanation. Only the JSON object.
The array must contain exactly 4 shots.
shot_prompt must be a dense, cinematic visual description suitable for AI image/video generation. No labels, no narrative scene references — only visual content.",
  "user": "TASK
Generate exactly 4 shots for this sequence.

APPROVED SEQUENCE PROMPT — primary creative direction, overrides all other context:
Approved sequence prompt describing the standoff.

SEQUENCE CONTEXT
Title: The Standoff
Summary: Tense confrontation at dawn.
Description: Wide rooftop location.
Mood: tense
Location: Rooftop, dawn

PROJECT BACKGROUND — background continuity only, do not use to override the Approved Sequence Prompt:
Pitch: A cyberpunk farmer defends her last crop.
Story: Full narrative synopsis of the project.
Project Outline Background: ## Opening
Mara arrives.

Generate exactly 4 shots. Every shot must follow the subject, location, visual style, and mood of the Approved Sequence Prompt. The shots must form a continuous causal progression from shot 1 to shot 4. Avoid resets, contradictions, or repeated starting points.",
}
`;

exports[`buildShotsFromSequencePrompt > Path B (sequencePrompt absent): builds the fallback prompt with every optional field absent/null 1`] = `
{
  "system": "You are a professional cinematographer and storyboard supervisor.
Your task is to break a production sequence into exactly 6 individual shots.
Each shot is a single uninterrupted camera take.
Respect the narrative arc of the sequence. Do not invent characters or locations not mentioned in the story or sequence context.

CONTINUITY RULES:
- Generate the shots as a continuous causal action chain, not as disconnected moments.
- Each shot must begin from the previous shot's continuity_out state.
- Do not reset character positions, locations, emotional states, injuries, transformations, held objects, lost objects, or action outcomes between shots.
- If a character is killed, wounded, trapped, transformed, leaves the scene, loses an object, gains an object, or changes emotional state, every later shot must respect that new state.
- Every shot must include both continuity_in and continuity_out fields.
- Shot 1 continuity_in establishes the initial state of the sequence.
- Shot N continuity_out becomes the starting state of Shot N+1.
- Last shot continuity_out describes the final state reached by the end of the sequence.
- Before writing each shot, silently track: character positions, alive/dead/injured/transformed state, objects held/lost/destroyed, location, emotional state, and consequences of previous action. Do not output this reasoning. Only output the JSON.

Always respond with a valid JSON object matching exactly this schema:
{
  "shots": [
    {
      "title": "string — brief label for the shot",
      "shot_code": "string or null — production code e.g. SH010, SH020",
      "description": "string or null — narrative description of the shot",
      "duration_seconds": number or null — estimated duration 3-8s typical,
      "continuity_in": "string — state at the start of this shot, inherited from the previous shot's continuity_out",
      "action_pitch": "string or null — what happens on screen",
      "camera_pitch": "string or null — camera angle, lens, position",
      "framing": "string or null — CU / MCU / MS / WS / ECU / OTS / POV",
      "camera_movement": "string or null — static / pan / tilt / tracking / dolly / handheld",
      "continuity_out": "string — changed state at the end of this shot, which becomes the starting state of the next shot",
      "shot_prompt": "string or null — clean visual generation prompt in English, one dense paragraph"
    }
  ]
}
No markdown. No explanation. Only the JSON object.
The array must contain exactly 6 shots.
shot_prompt must be a dense, cinematic visual description suitable for AI image/video generation. No labels, no narrative scene references — only visual content.",
  "user": "Project: Neon Harvest

Sequence: The Standoff
Summary: Not provided
Description: Not provided
Narrative purpose: Not provided
Mood: Not provided
Location: Not provided

Break this sequence into exactly 6 individual shots. Fill all fields as precisely as possible. The shots must form a continuous causal progression from shot 1 to shot 6. Avoid resets, contradictions, or repeated starting points.",
}
`;
